--- a/geoshape/static/less/site_base.less
+++ b/geoshape/static/less/site_base.less
@@ -7,6 +7,7 @@
 
 html, body {
     height: 100%;
+    color: #29728C;
 }
 
 .navbar-brand {
@@ -48,7 +49,7 @@ nav.filter h4 a.toggle{
   padding: 40px;
   border-bottom: 1px solid #cccccc;
   box-shadow: 0 0 10px rgba(0,0,0,.35);
-  background: url('../img/fire_background.png') no-repeat left bottom;
+  background: url('../img/alps_background.png') no-repeat left bottom;
   background-size: cover;
 
   h1 {
