--- a/geoshape/static/css/site_base.css
+++ b/geoshape/static/css/site_base.css
@@ -23,6 +23,9 @@ body {
   background: #29728C;
   margin-top: 10px;
 }
+.footer .container .row {
+  color: #FFFFFF;
+}
 #wrap {
   height: auto !important;
   height: 100%;
