--- a/geoshape/templates/site_base.html
+++ b/geoshape/templates/site_base.html
@@ -20,11 +20,12 @@
             {% trans "Powered by" %} <a href="http://geoshape.org" target="_new">{% trans "GeoSHAPE" %}</a> <em>{% trans "version" %} {{ VERSION }}</em> |
             <a href="/docs">{% trans "Documentation" %}</a>
           </div>
-          <div class="col-md-6 pull-right">
+          <div class="col-md-4 pull-right">
             <label>{% trans "Language" %}</label>
             {% if csrf_token != "NOTPROVIDED" %}
             {% get_current_language as LANGUAGE %}
             <form class="form-inline" action="/i18n/setlang/" method="post">
+              <label>{% trans "Language" %}</label>
             {% csrf_token %}
               <select name="language" onchange="javascript:form.submit()">
                 {% for lang in LANGUAGES %}
