--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -12,7 +12,7 @@
   {% block hero %}
   <div class="jumbotron">
     <div class="container">
-      <h1><i class="fa fa-code-fork fa-6"></i>{% trans "OpenGeo Node" %} </h1>
+      <h1><img src="icon.png" alt="OpenGeo Node icon" style="width:70px;height:70px;">{% trans "OpenGeo Node" %} </h1>
       <p>{% blocktrans %} Geospatial capabilities for Security, Humanitarian Assistance, Partner Engagement – is designed to enable collaboration on geospatial information between mission partners in connected and disconnected operations.{% endblocktrans %}</p>
     </div>
   </div>
