--- a/geoshape/static/css/site_base.css
+++ b/geoshape/static/css/site_base.css
@@ -88,9 +88,13 @@ nav.filter h4 a.toggle {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
   background: url('../img/alps_background.png') no-repeat left bottom;
   background-size: cover;
+  text-shadow: 2px 2px 2px #29728C;
 }
 .jumbotron h1 {
   font-weight: bold;
+}
+.jumbotron p{
+  text-shadow: 2px 2px 2px #29728C;
 }
 .dropdown-menu > li a {
   display: block;
