--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -13,7 +13,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1><img src="../static/img/icon.png" alt="OpenGeo Node icon">  {% trans "OpenGeo Node" %} </h1>
-      <p>{% blocktrans %} Geospatial capabilities for Security, Humanitarian Assistance, Partner Engagement – is designed to enable collaboration on geospatial information between mission partners in connected and disconnected operations.{% endblocktrans %}</p>
+      <p><br>{% blocktrans %} Geospatial capabilities for Security, Humanitarian Assistance, Partner Engagement – is designed to enable collaboration on geospatial information between mission partners in connected and disconnected operations.{% endblocktrans %}</p>
     </div>
   </div>
   {% endblock %}
