--- a/geoshape/static/css/site_base.css
+++ b/geoshape/static/css/site_base.css
@@ -88,7 +88,7 @@ nav.filter h4 a.toggle {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
   background: url('../img/alps_background.png') no-repeat left bottom;
   background-size: cover;
-  text-shadow: 2px 2px 2px #29728C;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 .jumbotron h1 {
   font-weight: bold;
