--- a/geoshape/static/css/site_base.css
+++ b/geoshape/static/css/site_base.css
@@ -44,7 +44,8 @@ body.groups li#nav_groups a {
 }
 .footer {
   border-top: 1px solid #cccccc;
-  height: 100px;
+  /*height: 100px;*/
+  bottom: 0px;
   padding: 23px;
   /*changed background color*/
   background: #29728C;
