--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -24,11 +24,13 @@
     {% with facet_type='home' %}
      {% facets as facets %}
       <div class="col-md-4">
+        <a href="{% url "layer_browse" %}">
         <p class="text-center"><i class="fa fa-square-o fa-5x rotate-45"></i></p>
         <h2 class="text-center">{{ facets.layer|default:"No" }} Layer{{ facets.layer|pluralize }}</h2>
 
         <p class="text-center">{% trans "Click to search for geospatial data published by other users, organizations and public sources. Download data in standard formats." %}</p>
         <p class="text-center"><a class="btn btn-default" href="{% url "layer_browse" %}" role="button">{% trans "Explore Layers" %} &raquo;</a></p>
+      </a>
       </div>
       <div class="col-md-4">
         <p class="text-center"><i class="fa fa-map-marker fa-5x"></i></p>
