--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -24,7 +24,7 @@
     {% with facet_type='home' %}
      {% facets as facets %}
       <div class="col-md-4">
-        <a href="{% url "layer_browse" %}">
+        <a class="info-blurb" href="{% url "layer_browse" %}">
         <p class="text-center"><i class="fa fa-square-o fa-5x rotate-45"></i></p>
         <h2 class="text-center">{{ facets.layer|default:"No" }} Layer{{ facets.layer|pluralize }}</h2>
 
