--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -32,7 +32,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a class="info-blurb" href="{% url "layer_browse" %}">
+        <a class="info-blurb" href="{% url "maps_browse" %}">
           <p class="text-center"><i class="fa fa-map-marker fa-5x"></i></p>
           <h2 class="text-center">{{ facets.map|default:"No" }} Map{{ facets.map|pluralize }}</h2>
           <p class="text-center">{% trans "Data is available for browsing, aggregating and styling to generate maps which can be shared publicly or restricted to specific users only." %}</p>
@@ -40,7 +40,7 @@
         </a>
       </div>
       <div class="col-md-4">
-        <a class="info-blurb" href="{% url "layer_browse" %}">
+        <a class="info-blurb" href="{% url "layer_upload" %}">
           <p class="text-center"><i class="fa fa-cloud-upload fa-5x"></i></p>
           <h2 class="text-center">{{ facets.user|default:"No" }} User{{ facets.user|pluralize }}</h2>
           <p class="text-center">{% trans "GeoNode allows registered users to easily upload geospatial data in several formats including shapefile and GeoTiff." %}</p>
