--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="col-md-4">
         <a class="info-blurb" href="{% url "maps_browse" %}">
-          <p class="text-center"><i class="fa fa-map-marker fa-5x"></i></p>
+          <p class="text-center"><i class="fa fa-map fa-5x"></i></p>
           <h2 class="text-center">{{ facets.map|default:"No" }} Map{{ facets.map|pluralize }}</h2>
           <p class="text-center">{% trans "Data is available for browsing, aggregating and styling to generate maps which can be shared publicly or restricted to specific users only." %}</p>
           <p class="text-center"><a class="btn btn-default" href="{% url "maps_browse" %}" role="button">{% trans "Create maps" %} &raquo;</a></p>
