--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -27,7 +27,7 @@
         <a class="info-blurb" href="{% url "layer_browse" %}">
           <p class="text-center">
             <!-- <i class="fa fa-square-o fa-5x rotate-45"></i></p> -->
-          <span class="fa-stack fa-rotate-90" style='font-size:20px'>
+          <span class="fa-stack fa-rotate-90">
             <i class="fa fa-stop fa-layers fa-stack-1x fa-5x" style="left: 0;"></i>
             <i class="fa fa-stop fa-layers fa-stack-1x fa-5x" style="left: -.15em;color:#fff;"></i>
             <i class="fa fa-stop fa-layers fa-stack-1x fa-5x" style="left: -.3em;"></i>
