--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -28,11 +28,11 @@
           <p class="text-center">
             <!-- <i class="fa fa-square-o fa-5x rotate-45"></i></p> -->
           <span class="fa-stack fa-rotate-90">
-            <i class="fa fa-stop fa-layers fa-stack-1x fa-5x" style="left: 0;"></i>
-            <i class="fa fa-stop fa-layers fa-stack-1x fa-5x" style="left: -.15em;color:#fff;"></i>
-            <i class="fa fa-stop fa-layers fa-stack-1x fa-5x" style="left: -.3em;"></i>
-            <i class="fa fa-stop fa-layers fa-stack-1x fa-5x" style="left: -.45em;color:#fff;"></i>
-            <i class="fa fa-stop fa-layers fa-stack-1x fa-5x" style="left: -.6em;"></i>
+            <i class="fa fa-stop fa-layers fa-stack-1x fa-2x" style="left: 0;"></i>
+            <i class="fa fa-stop fa-layers fa-stack-1x fa-2x" style="left: -.15em;color:#E6E9ED;"></i>
+            <i class="fa fa-stop fa-layers fa-stack-1x fa-2x" style="left: -.3em;"></i>
+            <i class="fa fa-stop fa-layers fa-stack-1x fa-2x" style="left: -.45em;color:#E6E9ED;"></i>
+            <i class="fa fa-stop fa-layers fa-stack-1x fa-2x" style="left: -.6em;"></i>
           </span>
           <h2 class="text-center">{{ facets.layer|default:"No" }} Layer{{ facets.layer|pluralize }}</h2>
           <p class="text-center">{% trans "Click to search for geospatial data published by other users, organizations and public sources. Download data in standard formats." %}</p>
