--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -13,7 +13,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1><img src="../static/img/icon.png" alt="OpenGeo Node icon">  {% trans "OpenGeo Node" %} </h1>
-      <p>{% blocktrans %} A collaborative hub to publish, share, edit and version all your geospatial conent. {% endblocktrans %}</p>
+      <p>{% blocktrans %} A collaborative hub to publish, share, edit and version all your geospatial content. {% endblocktrans %}</p>
     </div>
   </div>
   {% endblock %}
@@ -34,6 +34,7 @@
             <i class="fa fa-stop fa-layers fa-stack-1x fa-2x" style="left: -.45em;color:#E6E9ED;"></i>
             <i class="fa fa-stop fa-layers fa-stack-1x fa-2x" style="left: -.6em;"></i>
           </span>
+        </p>
           <h2 class="text-center">{{ facets.layer|default:"No" }} Layer{{ facets.layer|pluralize }}</h2>
           <p class="text-center">{% trans "Click to search for geospatial data published by other users, organizations and public sources. Download data in standard formats." %}</p>
           <p class="text-center"><a class="btn btn-default" href="{% url "layer_browse" %}" role="button">{% trans "Explore Layers" %} &raquo;</a></p>
