--- a/geoshape/static/css/site_base.css
+++ b/geoshape/static/css/site_base.css
@@ -135,10 +135,13 @@ nav.filter h4 a.toggle {
   -webkit-transform:rotate(50deg) skewX(24deg) skewY(12deg);
   -ms-transform:rotate(50deg) skewX(24deg) skewY(12deg);
 }
-.fa-stack{
+.fa-stack {
   top: 25px;
   vertical-align: inherit;
 
+}
+.stacked {
+  margin-top: 25px;
 }
 /* Hacks */
 input[value='Invite User'] {
