--- a/geoshape/templates/site_base.html
+++ b/geoshape/templates/site_base.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 small-text">
-            {% trans "Powered by" %} <a href="http://boundlessgeo.com/products/opengeo-suite/" target="_new">{% trans "OpenGeo Suite" %}</a> <em>{% trans "version" %} {{ VERSION }}</em> |
+            {% trans "Powered by" %} <a href="http://boundlessgeo.com/products/opengeo-suite/" target="_new">{% trans "Boundless Suite" %}</a> <em>{% trans "version" %} {{ VERSION }}</em> |
             <a href="/docs">{% trans "Documentation" %}</a>
           </div>
           <div class="col-md-4 pull-right">
