--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -12,7 +12,7 @@
   {% block hero %}
   <div class="jumbotron">
     <div class="container">
-      <h1><img src="../static/img/icon.png" alt="Boundless Exchange icon">  {% trans "Boundless Exchange" %} </h1>
+      <h1><img src="../static/img/icon.png" alt="Boundless Exchange icon"> <span class="title"> {% trans "Boundless Exchange" %} </span></h1>
       <p>{% blocktrans %} A collaborative hub to publish, share, edit and version all your geospatial content. {% endblocktrans %}</p>
     </div>
   </div>
