--- a/geoshape/static/css/site_base.css
+++ b/geoshape/static/css/site_base.css
@@ -105,9 +105,9 @@ nav.filter h4 a.toggle {
   padding: inherit;
 }
 
-#search_input {
-  margin-left: 300px;
-}
+/*#search_input {
+  margin-left: 150px;
+}*/
 /* Profile */
 .resource-list {
   list-style: none;
