--- a/geoshape/static/css/site_base.css
+++ b/geoshape/static/css/site_base.css
@@ -91,6 +91,7 @@ nav.filter h4 a.toggle {
 }
 .jumbotron p{
   font-size: 25px;
+  padding-left: 147px;
 }
 .dropdown-menu > li a {
   display: block;
