--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -35,7 +35,7 @@
             </span>
           </p>
           <h2 class="text-center stacked">{{ facets.layer|default:"No" }} Layer{{ facets.layer|pluralize }}</h2>
-          <p class="text-center">{% trans "Search for geospatial data published by others and public sources. Download them in one-click in the format you need." %}</p>
+          <p class="text-center blurb">{% trans "Search for geospatial data published by others and public sources. Download them in one-click in the format you need." %}</p>
           <p class="text-center"><a class="btn btn-default" href="{% url "layer_browse" %}" role="button">{% trans "Explore Layers" %} &raquo;</a></p>
         </a>
       </div>
@@ -43,7 +43,7 @@
         <a class="info-blurb" href="{% url "maps_browse" %}">
           <p class="text-center"><i class="fa fa-map fa-5x"></i></p>
           <h2 class="text-center">{{ facets.map|default:"No" }} Map{{ facets.map|pluralize }}</h2>
-          <p class="text-center">{% trans "Aggregate and style geospatial data into maps and share them publicly or to specific users only. Or make a report, spreadsheet, app or dashboard." %}</p>
+          <p class="text-center blurb">{% trans "Aggregate and style geospatial data into maps and share them publicly or to specific users only. Or make a report, spreadsheet, app or dashboard." %}</p>
           <p class="text-center"><a class="btn btn-default" href="{% url "maps_browse" %}" role="button">{% trans "Create maps" %} &raquo;</a></p>
         </a>
       </div>
@@ -51,7 +51,7 @@
         <a class="info-blurb" href="{% url "layer_upload" %}">
           <p class="text-center"><i class="fa fa-cloud-upload fa-5x"></i></p>
           <h2 class="text-center">{{ facets.user|default:"No" }} User{{ facets.user|pluralize }}</h2>
-          <p class="text-center">{% trans "Exchange allows registered users to easily upload geospatial data, search for data and make maps." %}</p>
+          <p class="text-center blurb">{% trans "Exchange allows registered users to easily upload geospatial data, search for data and make maps." %}</p>
           <p class="text-center"><a class="btn btn-default" href="{% url "layer_upload" %}" role="button">{% trans "Share data" %} &raquo;</a></p>
         </a>
       </div>
