Revert "attempting to fix search issue"
This reverts commit 2eefd356fe6f8062b969fcca55b61a436852206c.

--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -12,7 +12,7 @@
   {% block hero %}
   <div class="jumbotron">
     <div class="container">
-      <h1><img src="../static/img/icon.png" alt="Boundless Exchange icon">  {% trans "Boundless Exchange" %} </h1>
+      <h1><img src="../static/img/icon.png" alt="Boundless Exchange icon"> <span class="title"> {% trans "Boundless Exchange" %} </span></h1>
       <p>{% blocktrans %} A Platform for GeoSpatial Collaboration  {% endblocktrans %}</p>
     </div>
   </div>
