--- a/docs/themes/exchange_rtd_theme/static/css/theme.css
+++ b/docs/themes/exchange_rtd_theme/static/css/theme.css
@@ -5066,7 +5066,7 @@ div[class^='highlight'] pre {
 #header .suite_logo a {
   margin: 1em 0 0 1em;
   float: left;
-  width: 304px;
+  width: 330px;
   height: 40px;
   overflow: hidden;
   text-indent: -9999em;
@@ -5191,7 +5191,7 @@ div[class^='highlight'] pre {
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 1.5 / 1), only screen and (min-resolution: 144dpi), only screen and (min-resolution: 1.5dppx) {
   #header .suite_logo a {
     background: url("../img/boundless-exchange-logo@2x.png") no-repeat;
-    background-size: 304px 40px;
+    background-size: 321px 40px;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (min-width: 320px) and (max-width: 480px), only screen and (min--moz-device-pixel-ratio: 1.5) and (min-width: 320px) and (max-width: 480px), only screen and (-o-min-device-pixel-ratio: 1.5 / 1) and (min-width: 320px) and (max-width: 480px), only screen and (min-resolution: 144dpi) and (min-width: 320px) and (max-width: 480px), only screen and (min-resolution: 1.5dppx) and (min-width: 320px) and (max-width: 480px) {
@@ -5294,7 +5294,7 @@ div[class^='highlight'] pre {
 }
 #header .powered_by {
   float: right;
-  background: url("../img/powered-by-boundless.png") no-repeat;
+  background: url("../img/powered-by-geonode.png") no-repeat;
   height: 30px;
   width: 100px;
   margin: 1.3em 1em 0 0;
