--- a/geoshape/templates/index.html
+++ b/geoshape/templates/index.html
@@ -12,9 +12,8 @@
   {% block hero %}
   <div class="jumbotron">
     <div class="container">
-      <h1><img src="../static/img/icon.png" alt="Boundless Exchange icon"> <span class="title"> {% trans "Boundless Exchange" %} </span></h1>
-      <p>{% blocktrans %} A Platform for GeoSpatial Collaboration  {% endblocktrans %}</p>
-    </div>
+      <h1><img src="{% static "img/icon.png" %}" alt="Boundless Exchange icon"> <span class="title"> {% trans "Boundless Exchange" %} </span></h1>
+      <p>{% blocktrans %} A Platform for GeoSpatial Collaboration  {% endblocktrans %}</p>    </div>
   </div>
   {% endblock %}
 
